--- a/index.html
+++ b/index.html
@@ -234,17 +234,21 @@
 <footer class="mt-24 py-12 px-6 md:px-16 bg-gradient-to-r from-slate-900 via-slate-800 to-slate-900 border-t border-cyan-500/20 rounded-xl relative overflow-hidden">
     <!-- Animated top glow line -->
     <div class="absolute top-0 left-0 w-full h-1 bg-gradient-to-r from-cyan-400 via-blue-400 to-purple-500 animate-pulse"></div>
-    
     <div class="max-w-4xl mx-auto text-center space-y-4 relative z-10">
-        <h3 class="text-xl md:text-2xl font-bold text-white tracking-tight mb-2">About the Author</h3>
-        <p class="text-slate-300 text-sm md:text-base leading-relaxed text-left">
-            <strong><span class="gradient-text">Vishnu priya Govindarajan's</span></strong> work focuses on developing data-driven GTM frameworks at the intersection of marketing and mathematics. This whitepaper is the first in a <strong class text-white>research series</strong> dedicated to establishing <strong class text-white>a new mathematical foundation for marketing in the age of AI and eventually automate the function end-to-end, the right way.</strong><p class="text-slate-300 text-sm md:text-base leading-relaxed text-left">The objective is to provide leaders with a robust framework to think with clarity, act with decisiveness, and scale with precision.</p>
-        </p>
-        <a href="https://www.linkedin.com/in/vpg" 
-           class="mt-6 inline-block bg-gradient-to-r from-cyan-500 to-blue-500 text-white font-bold px-6 py-3 rounded-lg hover:opacity-90 transition-transform duration-200 hover:scale-105">
-           Contact Me
-        </a>
-    </div>
+    <h3 class="text-xl md:text-2xl font-bold text-white tracking-tight mb-2">About the Author</h3>
+    <p class="text-slate-300 text-sm md:text-base leading-relaxed text-left">
+        <strong><span class="gradient-text">Vishnu priya Govindarajan's</span></strong> work focuses on developing data-driven GTM frameworks at the intersection of marketing and mathematics. This whitepaper is the first in a <strong class="text-white">research series</strong> dedicated to establishing <strong class="text-white">a new mathematical foundation for marketing in the age of AI</strong> and eventually automate the function end-to-end, the right way.
+    </p>
+
+    <p class="text-slate-300 text-sm md:text-base leading-relaxed text-left">
+        The objective is to provide leaders with a robust framework to think with clarity, act with decisiveness, and scale with precision.
+    </p>
+
+    <a href="https://www.linkedin.com/in/vpg"
+        class="mt-6 inline-block bg-gradient-to-r from-cyan-500 to-blue-500 text-white font-bold px-6 py-3 rounded-lg hover:opacity-90 transition-transform duration-200 hover:scale-105">
+        Contact Me
+    </a>
+</div>
     <p class="text-xs text-slate-500 mt-8">
   &copy; 2025 Vishnu priya Govindarajan. All Rights Reserved.
 </p>
